Added comments using development branch

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>My Website</title>
 </head>
 <body>
+    <!-- The heading of the website -->
     <h1>Welcome to My Website</h1>
     
     <!-- Your content goes here -->
     
+    <!-- Include the JavaScript file -->
     <script src="script.js"></script>
 </body>
 </html>
