Commit using main to observe merge conflict

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- The heading of the website -->
     <h1>Welcome to My Website</h1>
     
-    <!-- Your content goes here -->
+    <!-- Your content goes here (Structure) -->
     
     <!-- Include the JavaScript file -->
     <script src="script.js"></script>
