--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
     
     <!-- Include the JavaScript file -->
     <script src="script.js"></script>
+
+    <div>
+        <p>somthing </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quos possimus, cum at dignissimos odio minus ea excepturi placeat perspiciatis necessitatibus quia, autem harum quo incidunt officiis accusamus hic quidem!</p>
+        </div>
 </body>
 </html>
